# alphago_zero

./: CMakeLists.txt  LICENSE  README.md
data/agents/: zero_9small_mode4.pt  zero_9small_model.pt  zero_9small_model1.pt  zero_9small_model2.pt  zero_9small_model2_backup.pt  zero_9small_model3.pt  zero_9small_optimizer.pt  zero_9small_optimizer1.pt  zero_9small_optimizer2.pt  zero_9small_optimizer3.pt  zero_9small_optimizer4.pt
data/logs/: zero_9small_train2_4.json
src/: CMakeLists.txt
src/agents/: CMakeLists.txt  lp_mcts_agent.h  mcts_agent.h  random_agent.h  zero_agent.h
src/app/: CMakeLists.txt  vs_zero_13small.cpp  vs_zero_9small.cpp  zero_13small_selfplay.cpp  zero_9small_selfplay.cpp
src/distributions/: CMakeLists.txt  null_distribution.h
src/encoders/: CMakeLists.txt  go_action_encoder.h  go_oneplane.h  go_zero_encoder.h
src/experience/: CMakeLists.txt  zero_episodic_exp.h
src/game/: CMakeLists.txt  game_base.h  ttt_types.h  types.h
src/models/: CMakeLists.txt  model_base.h  resnet_layer.h  zero_model_resnet_small.h  zero_model_small.h
src/pytorch_util/: CMakeLists.txt  pytorch_debug.h  pytorch_util.h
src/rapidjson/: CMakeLists.txt
src/rgen/: CMakeLists.txt  pcg.h  splitmix.h
src/sgf/: CMakeLists.txt
src/util/: CMakeLists.txt  bag.h  type_alias.h
src/webapp/: CMakeLists.txt  zero_9small_webapp.cpp
src/zobrist_hash/: CMakeLists.txt
