add_subdirectory(rapidjson)
add_subdirectory(util)
add_subdirectory(rgen)
add_subdirectory(distributions)
#add_subdirectory(sgf)
add_subdirectory(pytorch_util)
add_subdirectory(game)
add_subdirectory(zobrist_hash)
add_subdirectory(encoders)
add_subdirectory(experience)
add_subdirectory(models)
add_subdirectory(agents)
add_subdirectory(app)
#add_subdirectory(webapp)
